--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link href="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./main.css">
+
 </head>
 
 <body>
@@ -20,8 +21,10 @@
     <h2>Inserir nova imagem</h2>
     <input type="url" required placeholder="URL da imagem">
     <button type="submit">Adicionar</button>
-    <button type="reset">Cancelar</button>
+    <button type="reset" id="button-cancelar">Cancelar</button>
   </form>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
