--- a/index.html
+++ b/index.html
@@ -19,10 +19,36 @@
   </header>
   <form>
     <h2>Inserir nova imagem</h2>
-    <input type="url" required placeholder="URL da imagem">
+    <input type="url" id="endereco-imagem-nova" required placeholder="URL da imagem">
     <button type="submit">Adicionar</button>
     <button type="reset" id="button-cancelar">Cancelar</button>
   </form>
+  <ul>
+    <li>
+      <img src="/images/foto1.jpg" alt="pintura de um gato" />
+      <div class="overlay-imagem-link">
+        <a href="/images/foto1.jpg" title=" Ver imagem em tamanho real" target="_blank">
+          Ver imagem em tamanho real
+        </a>
+      </div>
+    </li>
+    <li>
+      <img src="/images/foto2.jpg" alt="imagem flamingo" />
+      <div class="overlay-imagem-link">
+        <a href="/images/foto2.jpg" title=" Ver imagem em tamanho real" target="_blank">
+          Ver imagem em tamanho real
+        </a>
+      </div>
+    </li>
+    <li>
+      <img src="/images/foto3.jpg" alt="imagem dois filhotes de cachorros" />
+      <div class="overlay-imagem-link">
+        <a href="/images/foto3.jpg" title=" Ver imagem em tamanho real" target="_blank">
+          Ver imagem em tamanho real
+        </a>
+      </div>
+    </li>
+  </ul>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="./main.js"></script>
 </body>
